# mimic-dataset

./: README.md  pyproject.toml  requirements_new.txt  setup.py
.github/workflows/: ci_cd.yml
resources/configs/dev/: config.yaml
src/: main.py
src/bronze/: 01_Ingest_data_to_bronze.py
src/mimic_dataset/: main.py
src/mimic_dataset/bronze/: ingest_data_to_bronze.py
src/mimic_dataset/data_quality/: quality_check.py
src/mimic_dataset/gen_ai/: rag_pipeline.py
src/mimic_dataset/gold/: load_to_gold.py
src/mimic_dataset/silver/: transform_and_load_to_silver.py
src/mimic_dataset/utils/: file.py  globals.py  spark_session.py
