[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic_dataset"
version = "0.1.2"
description = "Mimic patients analysis python project."
authors = [
    { name = "Anji" }
]

dependencies = [
    "databricks-sdk",
    "PyYAML==6.0.2",
    "setuptools~=78.1.1",
    "pytest",
    "pytest-cov",
    "databricks-cli"
]

# Entry point (FIXED - very important)
[project.scripts]
run = "mimic_dataset.main:main"

# If you really need custom groups (rare)
[project.entry-points."group_1"]
run = "mimic_dataset.main:main"

# Tell setuptools where code is
[tool.setuptools.packages.find]
where = ["src"]

# Include non-code files
[tool.setuptools.package-data]
"" = ["resources/configs/**/*"]